--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -47,6 +48,16 @@
         <div class="navIconDiv"><i class="fas fa-angle-double-down"></i></div
       ></span>
     </nav>
+
+    <header>
+      <div class="headerImg">
+        <img src="/images/profile-hex.png" />
+      </div>
+      <br />
+      <div class="headerText">
+        <h2><span>Lea </span>Pehar</h2>
+      </div>
+    </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
