Set up the main container by making it 90% of the width of its parent element and centering it.

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,25 @@
     </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias omnis
+        aspernatur, voluptatibus magni perferendis amet voluptates aliquid,
+        nulla sunt, quis rem tenetur eius ad repellat quas veniam quasi
+        veritatis praesentium.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias omnis
+        aspernatur, voluptatibus magni perferendis amet voluptates aliquid,
+        nulla sunt, quis rem tenetur eius ad repellat quas veniam quasi
+        veritatis praesentium.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias omnis
+        aspernatur, voluptatibus magni perferendis amet voluptates aliquid,
+        nulla sunt, quis rem tenetur eius ad repellat quas veniam quasi
+        veritatis praesentium.
+      </p>
+    </main>
   </body>
 </html>
