--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -74,5 +75,6 @@
         </form>
       </section>
     </main>
+    <script src="scripts/composer-char-counter.js"></script>
   </body>
 </html>
