--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
           </div>
         </form>
       </section>
-      <section class="newTweetSection">
+      <section class="newTweetSection" id="tweets-container">
         <article class="tweet">
           <header>
             <div>
