--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
 
       <main class="container">
         <section class="new-tweet">
-          <!-- <h2>Compose Tweet</h2> -->
+          <h2>Compose Tweet</h2>
           <div class="error messageNoLengthError">
             <p>you must enter a tweet before submitting</p>
           </div>
@@ -91,32 +91,7 @@
             </div>
           </form>
         </section>
-        <section class="newTweetSection" id="tweets-container">
-          <article class="tweet">
-            <header>
-              <div>
-                <div class="userAvatar">
-                  <img src="images/old-man.png" alt="" />
-                </div>
-                <span class="userName">Newton</span>
-              </div>
-              <span class="userHandle">@SirIsaac</span>
-            </header>
-            <div class="middle">
-              <p>
-                If I have seen further is it by standing on the shoulders of
-                giants
-              </p>
-            </div>
-            <footer>
-              <span>10 days ago</span>
-              <span class="tweetIcons"
-                ><i class="fas fa-flag"></i><i class="fas fa-retweet"></i
-                ><i class="fas fa-heart"></i
-              ></span>
-            </footer>
-          </article>
-        </section>
+        <section class="newTweetSection" id="tweets-container"></section>
       </main>
     </div>
 
